- Using IDCTimes interface instead of IZopeDublinCore to determine the   modification date of a file. [backported from trunk]

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,8 @@ CHANGES
 3.4.3 (unreleased)
 ------------------
 
-- ...
+- Using IDCTimes interface instead of IZopeDublinCore to determine the
+  modification date of a file.
 
 3.4.2 (2007-11-09)
 ------------------
