--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ CHANGES
 3.5.1 (unreleased)
 ------------------
 
-- ...
+- Fix ftesting.zcml due to zope.securitypolicy update.
 
 3.5.0 (2009-01-31)
 ------------------
