Prepare for release.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,9 +6,13 @@ CHANGES
 ------------------
 
 - Fix ftesting.zcml due to zope.securitypolicy update.
+
 - Added missing dependency on transaction.
+
 - Import content-type parser from zope.contenttype, reducing zope.publisher to
   a test dependency.
+
+- Fix tests using a newer zope.publisher that requires zope.login.
 
 3.5.0 (2009-01-31)
 ------------------
