Update 'ftesting.zcml' to use current 'zope.dublincore' permissions.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,8 @@ CHANGES
 3.5.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Updated ``ftesting.zcml`` to use the permission names now exported by
+  ``zope.dublincore``.
 
 
 3.5.1 (2010-01-08)
